@@ -83,6 +83,7 @@
 
 3.11.1
  * Properly evict pstmts from prepared statements cache (CASSANDRA-13641)
+ * Add a compaction option to TWCS to ignore sstables overlaping checks (CASSANDRA-13418)
 Merged from 3.0:
   * Fix secondary index queries on COMPACT tables (CASSANDRA-13627) 
   * Nodetool listsnapshots output is missing a newline, if there are no snapshots (CASSANDRA-13568)
